tips.html ha sido terminado, mydogs.html se creo y es el último .html a crearse

--- a/layout.html
+++ b/layout.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="tips.html">Tips</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
+                            <a class="nav-link" href="mydogs.html">My Dogs</a>
                         </li>
                     </ul>
                 </div>
