--- a/tips.html
+++ b/tips.html
@@ -213,6 +213,188 @@
                     </div>                    
                 </div>  
             </section7> 
+            <section8>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8">                        
+                        <h3>Bleeding Disorders</h3>
+                        <p>
+                            There are several types of inherited bleeding disorders that occur in dogs. They range in severity from very mild to very severe. Many times a pet seems normal until a serious injury occurs or surgery is performed, and then severe bleeding can result. Von Willebrand’s disease is a blood clotting disorder frequently found in Siberian Huskies. We’ll conduct diagnostic testing for blood clotting times or a specific DNA blood test for Von Willebrand’s disease and other similar disorders to check for this problem before we perform surgery.                        
+                        </p>  
+                        </div>
+                        <div class="col-md-4">
+                            <div class="indice custom-box">                        
+                                <img src="static/images/Husky_tip1.webp" alt="Siberian Husky tip1" class="img-fluid header-image">
+                            </div>
+                        </div>                        
+                    </div>
+                    <div class="container">
+                        <div class="indice custom-box">
+                            <ol id="ordered-list" class="list-unstyled custom-list">
+                                <li>
+                                    <a>
+                                        Von Willebrand’s disease is a blood clotting disorder frequently found in Siberian Huskies. We’ll conduct diagnostic testing for blood clotting times or a specific DNA blood test for Von Willebrand’s disease and other similar disorders to check for this problem before we perform surgery.                                    
+                                    </a>
+                                </li>                            
+                            </ol>                           
+                        </div>
+                    </div>                    
+                </div>  
+            </section8>      
+            <section9>
+                <div class="container">
+                    <div class="row">
+                        <h3>Epilepsy</h3>
+                        <p>
+                            There are three types of seizures in dogs: reactive, secondary, and primary. Reactive seizures are caused by the brain’s reaction to a metabolic problem like low blood sugar, organ failure, or a toxin. Secondary seizures are the result of a brain tumor, stroke, or trauma. If no other cause can be found, the disease is called primary or idiopathic epilepsy. This problem is often an inherited condition, and Siberian Huskies are commonly afflicted. If your friend is prone to seizures, episodes will usually begin between six months and three years of age. An initial diagnostic workup may help find the cause. Lifelong medication is usually necessary to help keep seizures under control with periodic blood testing required to monitor side effects and efficacy. If your dog has a seizure, carefully prevent him from injuring himself, but don’t try to control his mouth or tongue. It won’t help him, and he may bite you accidentally! Note the length of the seizure, and call us or an emergency hospital.                                    
+                        </p>  
+                    </div>                   
+                </div>  
+            </section9>        
+            <section10>
+                <div class="container">
+                    <div class="row">
+                        <h3>Laryngeal Paralysis</h3>
+                        <p>
+                            Huskies may develop a disease called laryngeal paralysis in which the vocal cords become paralyzed and hang down into the airway. The primary symptom is noisy breathing, especially when outside in hot, humid weather or after exercising, but in severe cases, a pet can collapse and have difficulty breathing as well. Treatment may include environment control and medication. Bring your pet in right away if you notice signs of respiratory distress before the problem becomes a surgical emergency!
+                        </p>  
+                    </div>                   
+                </div>  
+            </section10>        
+            <section11>
+                <div class="container">
+                    <div class="row">
+                        <h3>High Blood Pressure</h3>
+                        <p>
+                            Huskies are more likely than other breeds to have high blood pressure, also called hypertension, which may occur independently or be caused by another disease. High blood pressure can cause blindness and strokes in dogs, just as it can in people. The Vida Veterinary Care medical team will test his blood pressure on a regular basis and prescribe blood pressure medication if needed.
+                        </p>  
+                    </div>                   
+                </div>  
+            </section11>
+            <section12>
+                <div class="container">
+                    <div class="row">
+                        <h3>Heart Disease</h3>
+                        <p>
+                            Some breeds, like your Husky, can be born with a variety of heart defects. Most affect the structure of the heart’s dividing wall or the vessels of the heart. Defects can also cause problems with heart valve function or the electrical signals that control the heartbeat. Because of the significant risk of heart disease in this breed, we’ll pay special attention to his heart during each examination. Special testing will be recommended if we hear a heart murmur or if you notice any unusual symptoms such as tiring easily, coughing, a swollen belly, or fainting.
+                        </p>  
+                    </div>                   
+                </div>  
+            </section12>    
+            <section13>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-8">                        
+                            <h3>Cancer</h3>
+                            <p>
+                                Cancer is a leading cause of death in older dogs. Your Husky will likely live longer than many other breeds and therefore is more prone to get cancer in his golden years. Many cancers are curable by surgical removal, and some types are treatable with chemotherapy. Early detection is critical! We’ll perform periodic diagnostic tests and look for lumps and bumps when we examine your pet.                            </p>  
+                            </div>
+                            <div class="col-md-4">
+                                <div class="indice custom-box">                        
+                                    <img src="static/images/husky-tip2.webp" alt="Siberian Husky tip2" class="img-fluid header-image">
+                                </div>
+                            </div>
+                        </div>
+                    </div>                 
+                </div>  
+            </section13>     
+            <section14>
+                <div class="container">
+                    <div class="row">
+                        <h3>Skin Infections</h3>
+                        <p>
+                            Huskies are prone to a form of skin infection called zinc-responsive dermatosis in which a pet either doesn’t get enough zinc in his diet or his body doesn’t absorb it properly. Signs include red, hairless, crusting, scaling, or oozing skin around the mouth, chin, eyes, or ears, and lesions on the footpads or nose. If your dog develops this disease, we’ll prescribe a carefully regulated amount of added zinc to his diet.
+                        </p>  
+                    </div>                   
+                </div>  
+            </section14>                                               
+            <section15>
+                <div class="container">
+                    <div class="row">
+                        <h1>Taking Care of Your Siberian Husky at Home</h1>      
+                        <p>
+                            Much of what you can do to keep your dog happy and healthy is common sense, just like it is for people. Watch her diet, make sure she gets plenty of exercise, regularly brush her teeth and coat, and call us or a pet emergency hospital when something seems unusual (see “What to Watch For” below). Be sure to adhere to the schedule of examinations and vaccinations that we recommend for her. This is when we’ll give her the necessary “check-ups” and test for diseases and conditions that are common in Huskies. Another very important step in caring for your pet is signing up for pet health insurance. There will certainly be medical tests and procedures she will need throughout her life and pet health insurance will help you cover those costs.
+                        </p>                                                                 
+                    </div>                 
+                </div>  
+            </section15>   
+            <section16>
+                <div class="container">
+                    <div class="row">
+                        <h3>Routine Care, Diet, and Exercise</h3>
+                        <p>
+                            Build her routine care into your schedule to help your Husky live longer, stay healthier, and be happier during her lifetime. We cannot overemphasize the importance of a proper diet and exercise routine.                        
+                        </p>  
+                    </div>
+                    <div class="container">
+                        <div class="indice custom-box">
+                            <ol id="ordered-list" class="list-unstyled custom-list">
+                                <li>
+                                    <a>
+                                        Supervise your pet as you would a toddler. Keep doors closed, pick up after yourself, and block off rooms as necessary. This will keep her out of trouble and away from objects she shouldn’t put in her mouth.
+                                    </a>
+                                </li>  
+                                <li>
+                                    <a>
+                                        Give her a thorough brushing at least weekly most of the year. Twice a year she blows her coat and loses crazy amounts of hair; daily brushing is recommended during this time.
+                                    </a>                            
+                                </li> 
+                                <li>
+                                    <a>
+                                        She’s a smart dog with lots of energy, so keep her mind and body active, or she’ll get bored. That’s when the naughty stuff starts.
+                                    </a>                            
+                                </li>
+                                <li>
+                                    <a>
+                                        Huskies can be affected by snow nose, or a loss of pigment in the nose, making her prone to sunburn. She will need dog-safe (zinc-free) sunscreen.                                        
+                                    </a>
+                                </li> 
+                            </ol>
+                        </div>
+                    </div>                    
+                </div>  
+            </section16>              
+            <section17>
+                <div class="container">
+                    <div class="row">
+                        <h3>Office Calls</h3>
+                        <p>                        
+                            Give us a call for an appointment if you notice any of these types of signs:
+                        </p>  
+                    </div>
+                    <div class="container">
+                        <div class="indice custom-box">
+                            <ol id="ordered-list" class="list-unstyled custom-list">
+                                <li>
+                                    <a>
+                                        Change in appetite or water consumption
+                                    </a>
+                                </li>  
+                                <li>
+                                    <a>
+                                        Tartar build-up, bad breath, red gums, or broken teeth
+                                    </a>                            
+                                </li> 
+                                <li>
+                                    <a>
+                                        Itchy skin (scratching, chewing, or licking); hair loss
+                                    </a>                            
+                                </li>
+                                <li>
+                                    <a>
+                                        Fearfulness, aggression, or other behavioral changes
+                                    </a>
+                                </li> 
+                                <li>
+                                    <a>
+                                        Lumps or bumps – regardless of size                                        
+                                    </a>
+                                </li>
+                            </ol>
+                        </div>
+                    </div>                    
+                </div>  
+            </section17>              
         </main>
     </section>    
     <footer id="footer-content"></footer>
