--- a/mydogs.html
+++ b/mydogs.html
@@ -3,39 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">          
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./static/CSS/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./static/JS/script.js"></script>
-    <script src="./static/JS/fetch.js"></script>        
     <title>My Dogs</title>
 </head>
 <body>
-    <div id="header-content"></div>        
-    <section>
-        <main>    
+    <div>
+        <!-- Barra de navegación -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">        
             <div class="container">
-                
-                <!-- Grid Layout de Bootstrap: Dos columnas -->
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>Columna 1</h2>
-                        <p>Contenido de la primera columna.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <h2>Columna 2</h2>
-                        <p>Contenido de la segunda columna.</p>
-                    </div>
+                <div class="d-flex">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="static/images/logo.webp" alt="logo" width="50" height="50" class="d-inline-block align-text-top">
+                        Wao!
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="siberian_husky.html">Siberian Husky</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="characteristics.html">Characteristics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="curiosities.html">Curiosities</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tips.html">Tips</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="mydogs.html">My Dogs</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
-        </main>
-    </section>
-    <footer id="footer-content"></footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
+        </nav>        
+    </div>  
+    <main>    
+        <div class="container">
+            
+            <!-- Grid Layout de Bootstrap: Dos columnas -->
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Columna 1</h2>
+                    <p>Contenido de la primera columna.</p>
+                </div>
+                <div class="col-md-6">
+                    <h2>Columna 2</h2>
+                    <p>Contenido de la segunda columna.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+        <section>
+            <footer>
+                <p>&copy; 2023 My First Website. All rights reserved.</p>
+            </footer>
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+        </section>
 </body>
 </html>
 
