Se terminó todos los .html, solo resta hacer  SASS

--- a/mydogs.html
+++ b/mydogs.html
@@ -47,27 +47,75 @@
     <main>    
         <div class="container">
             <h1>These are my dogs</h1>
-            <p></p>
-            <p></p>
-            <p></p>            
             
             <!-- Grid Layout de Bootstrap: Dos columnas -->
             <div class="row">
                 <div class="col-md-6">
-                    <h2>Vela</h2>
-                    <div class="col-md-8">
-                        <div class="indice custom-box">                        
+                    <div class="indice custom-box">
+                        <div class="d-flex align-items-center"> <!-- Agregamos una clase d-flex y align-items-center -->
                             <img src="static/images/Vela_.webp" alt="Vela" class="img-fluid header-image">
+                            <table class="table ml-3"> 
+                                <tbody>
+                                    <tr>
+                                        <td>Name:</td>
+                                        <td>Vela</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Breed:</td>
+                                        <td>Siberian Husky</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Age:</td>
+                                        <td>4 years</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sex:</td>
+                                        <td>female</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Color:</td>
+                                        <td>Agouti and black</td>       
+                                        <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>                                                                                                                                                                   
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
+                        <p>This is Bella, she's Kira's mother. She likes to run, she loves to play with the balls, she is a great friend, and she is an incredible mother. She raised and took care of her three pups, of which I only stayed with Kira.</p>                        
                     </div>                     
                 </div>
                 <div class="col-md-6">
-                    <h2>Kira</h2>
-                    <div class="col-md-6">
-                        <div class="indice custom-box">  
-                            <img src="static/images/Kira.webp" alt="Kira" class="img-fluid header-image">
+                    <div class="indice custom-box">
+                        <div class="d-flex align-items-center"> <!-- Agregamos una clase d-flex y align-items-center -->
+                            <img src="static/images/Kira_.webp" alt="Kira" class="img-fluid header-image">
+                            <table class="table ml-3">
+                                <tbody>
+                                    <tr>
+                                        <td>Name:</td>
+                                        <td>Kira</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Breed:</td>
+                                        <td>Siberian Husky</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Age:</td>
+                                        <td>5 months</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Sex:</td>
+                                        <td>female</td>                                    
+                                    </tr>
+                                    <tr>
+                                        <td>Color:</td>
+                                        <td>White and gray</td>    
+                                        <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>                                                                                                                                                                   
+                                    </tr>                                
+                                </tbody>
+                            </table>
                         </div>
-                    </div>                                     </div>
+                        <p>This is Kira, she's the Vela son's. She loves play with Vela, but sometimes she is very naughty. She was the only one who stayed with me of her three sisters</p>
+                    </div>                                     
+                </div>
             </div>
         </div>
     </main>
