--- a/mydogs.html
+++ b/mydogs.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">          
     <link rel="stylesheet" href="./static/CSS/style.css">
+    <link rel="stylesheet" href="./static/SCSS/output.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>My Dogs</title>
 </head>
 <body>
@@ -58,23 +58,23 @@
                                 <tbody>
                                     <tr>
                                         <td>Name:</td>
-                                        <td>Vela</td>
+                                        <td class="word">Vela</td>
                                     </tr>
                                     <tr>
                                         <td>Breed:</td>
-                                        <td>Siberian Husky</td>
+                                        <td class="word">Siberian Husky</td>
                                     </tr>
                                     <tr>
                                         <td>Age:</td>
-                                        <td>4 years</td>
+                                        <td class="word">4 years</td>
                                     </tr>
                                     <tr>
                                         <td>Sex:</td>
-                                        <td>female</td>
+                                        <td class="word">female</td>
                                     </tr>
                                     <tr>
                                         <td>Color:</td>
-                                        <td>Agouti and black</td>       
+                                        <td class="word">Agouti and black</td>       
                                         <td rowspan="1"><img src="static/images/Color_B_W_B.webp" alt="Color Kira" class="img-fluid"></td>                                                                                                                                                                   
                                     </tr>
                                 </tbody>
@@ -91,23 +91,23 @@
                                 <tbody>
                                     <tr>
                                         <td>Name:</td>
-                                        <td>Kira</td>
+                                        <td class="word">Kira</td>
                                     </tr>
                                     <tr>
                                         <td>Breed:</td>
-                                        <td>Siberian Husky</td>
+                                        <td class="word">Siberian Husky</td>
                                     </tr>
                                     <tr>
                                         <td>Age:</td>
-                                        <td>5 months</td>
+                                        <td class="word">5 months</td>
                                     </tr>
                                     <tr>
                                         <td>Sex:</td>
-                                        <td>female</td>                                    
+                                        <td class="word">female</td>                                    
                                     </tr>
                                     <tr>
                                         <td>Color:</td>
-                                        <td>White and gray</td>    
+                                        <td class="word">White and gray</td>    
                                         <td rowspan="1"><img src="static/images/Color_G_W.webp" alt="Color Kira" class="img-fluid"></td>                                                                                                                                                                   
                                     </tr>                                
                                 </tbody>
@@ -124,8 +124,9 @@
                 <p>&copy; 2023 My First Website. All rights reserved.</p>
             </footer>
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js"></script>
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         </section>
 </body>
 </html>
